--- a/editcountitis/src/main/res/xml/widget_info.xml
+++ b/editcountitis/src/main/res/xml/widget_info.xml
@@ -3,6 +3,8 @@
                     android:initialLayout="@layout/widget_layout"
                     android:minHeight="72dp"
                     android:minWidth="72dp"
-                    android:updatePeriodMillis="1800000" >
+                    android:updatePeriodMillis="1800000"
+                    android:configure="in.yuvi.editcountitis.SettingsActivity"
+        >
 
 </appwidget-provider> 
